Fix last bugs for PR

--- a/docs/docs/integrations/document_loaders/pdfminer.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfminer.ipynb
@@ -77,8 +77,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[33mWARNING: There was an error checking the latest version of pip.\u001B[0m\u001B[33m\r\n",
-      "\u001B[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "\u001b[33mWARNING: There was an error checking the latest version of pip.\u001b[0m\u001b[33m\r\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -181,6 +181,7 @@
    "execution_count": 5,
    "source": [
     "import pprint\n",
+    "\n",
     "pprint.pp(docs[0].metadata)"
    ]
   },
@@ -1188,10 +1189,13 @@
    },
    "cell_type": "code",
    "source": [
-    "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_text_with_rapidocr\n",
+    "from patch_langchain_community.document_loaders.parsers.pdf import (\n",
+    "    convert_images_to_text_with_rapidocr,\n",
+    ")\n",
+    "\n",
     "loader = PDFMinerLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
+    "    mode=\"page\",\n",
     "    extract_images=True,\n",
     "    images_to_text=convert_images_to_text_with_rapidocr(format=\"html\"),\n",
     ")\n",
@@ -1307,10 +1311,13 @@
    },
    "cell_type": "code",
    "source": [
-    "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_text_with_tesseract\n",
+    "from patch_langchain_community.document_loaders.parsers.pdf import (\n",
+    "    convert_images_to_text_with_tesseract,\n",
+    ")\n",
+    "\n",
     "loader = PDFMinerLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
+    "    mode=\"page\",\n",
     "    extract_images=True,\n",
     "    images_to_text=convert_images_to_text_with_tesseract(format=\"text\"),\n",
     ")\n",
@@ -1485,15 +1492,17 @@
    "cell_type": "code",
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_description\n",
+    "from patch_langchain_community.document_loaders.parsers.pdf import (\n",
+    "    convert_images_to_description,\n",
+    ")\n",
+    "\n",
     "loader = PDFMinerLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
+    "    mode=\"page\",\n",
     "    extract_images=True,\n",
     "    images_to_text=convert_images_to_description(\n",
-    "        model=ChatOpenAI(\n",
-    "            model=\"gpt-4o\", max_tokens=1024),\n",
-    "        format=\"markdown\")\n",
+    "        model=ChatOpenAI(model=\"gpt-4o\", max_tokens=1024), format=\"markdown\"\n",
+    "    ),\n",
     ")\n",
     "docs = loader.load()\n",
     "print(docs[5].page_content)"
@@ -1584,7 +1593,7 @@
     "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
     "loader = PDFMinerPDFasHTMLLoader(file_path)\n",
     "docs = loader.load()\n",
-    "docs[0]\n"
+    "docs[0]"
    ],
    "outputs": [
     {
@@ -1652,7 +1661,7 @@
     "        cur_text = c.text\n",
     "snippets.append((cur_text, cur_fs))\n",
     "# Note: The above logic is very straightforward. One can also add more strategies such as removing duplicate snippets (as\n",
-    "# headers/footers in a PDF appear on multiple pages so if we find duplicates it's safe to assume that it is redundant info)\n"
+    "# headers/footers in a PDF appear on multiple pages so if we find duplicates it's safe to assume that it is redundant info)"
    ],
    "outputs": [],
    "execution_count": 18
@@ -1666,7 +1675,6 @@
    },
    "cell_type": "code",
    "source": [
-    "\n",
     "from langchain_core.documents import Document\n",
     "\n",
     "cur_idx = -1\n",
@@ -1675,8 +1683,8 @@
     "for s in snippets:\n",
     "    # if current snippet's font size > previous section's heading => it is a new heading\n",
     "    if (\n",
-    "            not semantic_snippets\n",
-    "            or s[1] > semantic_snippets[cur_idx].metadata[\"heading_font\"]\n",
+    "        not semantic_snippets\n",
+    "        or s[1] > semantic_snippets[cur_idx].metadata[\"heading_font\"]\n",
     "    ):\n",
     "        metadata = {\"heading\": s[0], \"content_font\": 0, \"heading_font\": s[1]}\n",
     "        metadata.update(docs[0].metadata)\n",
@@ -1687,8 +1695,8 @@
     "    # if current snippet's font size <= previous section's content => content belongs to the same section (one can also create\n",
     "    # a tree like structure for sub sections if needed but that may require some more thinking and may be data specific)\n",
     "    if (\n",
-    "            not semantic_snippets[cur_idx].metadata[\"content_font\"]\n",
-    "            or s[1] <= semantic_snippets[cur_idx].metadata[\"content_font\"]\n",
+    "        not semantic_snippets[cur_idx].metadata[\"content_font\"]\n",
+    "        or s[1] <= semantic_snippets[cur_idx].metadata[\"content_font\"]\n",
     "    ):\n",
     "        semantic_snippets[cur_idx].page_content += s[0]\n",
     "        semantic_snippets[cur_idx].metadata[\"content_font\"] = max(\n",
