--- a/docs/docs/integrations/document_loaders/pdfminer_fasthtml.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfminer_fasthtml.ipynb
@@ -79,8 +79,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "pdfplumber 0.11.4 requires pdfminer.six==20231228, but you have pdfminer-six 20240706 which is incompatible.\u001B[0m\u001B[31m\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "pdfplumber 0.11.4 requires pdfminer.six==20231228, but you have pdfminer-six 20240706 which is incompatible.\u001b[0m\u001b[31m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -123,8 +123,7 @@
     "from langchain_community.document_loaders import PDFMinerPDFasHTMLLoader\n",
     "\n",
     "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
-    "loader = PDFMinerPDFasHTMLLoader(file_path)\n",
-    "\n"
+    "loader = PDFMinerPDFasHTMLLoader(file_path)"
    ]
   },
   {
@@ -239,7 +238,7 @@
     "        cur_text = c.text\n",
     "snippets.append((cur_text, cur_fs))\n",
     "# Note: The above logic is very straightforward. One can also add more strategies such as removing duplicate snippets (as\n",
-    "# headers/footers in a PDF appear on multiple pages so if we find duplicates it's safe to assume that it is redundant info)\n"
+    "# headers/footers in a PDF appear on multiple pages so if we find duplicates it's safe to assume that it is redundant info)"
    ]
   },
   {
@@ -318,7 +317,6 @@
     }
    ],
    "source": [
-    "\n",
     "from langchain_core.documents import Document\n",
     "\n",
     "cur_idx = -1\n",
@@ -327,8 +325,8 @@
     "for s in snippets:\n",
     "    # if current snippet's font size > previous section's heading => it is a new heading\n",
     "    if (\n",
-    "            not semantic_snippets\n",
-    "            or s[1] > semantic_snippets[cur_idx].metadata[\"heading_font\"]\n",
+    "        not semantic_snippets\n",
+    "        or s[1] > semantic_snippets[cur_idx].metadata[\"heading_font\"]\n",
     "    ):\n",
     "        metadata = {\"heading\": s[0], \"content_font\": 0, \"heading_font\": s[1]}\n",
     "        metadata.update(docs[0].metadata)\n",
@@ -339,8 +337,8 @@
     "    # if current snippet's font size <= previous section's content => content belongs to the same section (one can also create\n",
     "    # a tree like structure for sub sections if needed but that may require some more thinking and may be data specific)\n",
     "    if (\n",
-    "            not semantic_snippets[cur_idx].metadata[\"content_font\"]\n",
-    "            or s[1] <= semantic_snippets[cur_idx].metadata[\"content_font\"]\n",
+    "        not semantic_snippets[cur_idx].metadata[\"content_font\"]\n",
+    "        or s[1] <= semantic_snippets[cur_idx].metadata[\"content_font\"]\n",
     "    ):\n",
     "        semantic_snippets[cur_idx].page_content += s[0]\n",
     "        semantic_snippets[cur_idx].metadata[\"content_font\"] = max(\n",
