--- a/docs/docs/integrations/document_loaders/pdfplumber.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfplumber.ipynb
@@ -77,8 +77,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[33mWARNING: There was an error checking the latest version of pip.\u001B[0m\u001B[33m\r\n",
-      "\u001B[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "\u001b[33mWARNING: There was an error checking the latest version of pip.\u001b[0m\u001b[33m\r\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -158,6 +158,7 @@
    "cell_type": "code",
    "source": [
     "import pprint\n",
+    "\n",
     "pprint.pp(docs[0].metadata)"
    ],
    "outputs": [
@@ -1060,10 +1061,13 @@
    },
    "cell_type": "code",
    "source": [
-    "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_text_with_rapidocr\n",
+    "from patch_langchain_community.document_loaders.parsers.pdf import (\n",
+    "    convert_images_to_text_with_rapidocr,\n",
+    ")\n",
+    "\n",
     "loader = PDFPlumberLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
+    "    mode=\"page\",\n",
     "    extract_images=True,\n",
     "    images_to_text=convert_images_to_text_with_rapidocr(format=\"html\"),\n",
     ")\n",
@@ -1169,10 +1173,13 @@
    },
    "cell_type": "code",
    "source": [
-    "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_text_with_tesseract\n",
+    "from patch_langchain_community.document_loaders.parsers.pdf import (\n",
+    "    convert_images_to_text_with_tesseract,\n",
+    ")\n",
+    "\n",
     "loader = PDFPlumberLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
+    "    mode=\"page\",\n",
     "    extract_images=True,\n",
     "    images_to_text=convert_images_to_text_with_tesseract(format=\"text\"),\n",
     ")\n",
@@ -1337,15 +1344,17 @@
    "cell_type": "code",
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_description\n",
+    "from patch_langchain_community.document_loaders.parsers.pdf import (\n",
+    "    convert_images_to_description,\n",
+    ")\n",
+    "\n",
     "loader = PDFPlumberLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
+    "    mode=\"page\",\n",
     "    extract_images=True,\n",
     "    images_to_text=convert_images_to_description(\n",
-    "        model=ChatOpenAI(\n",
-    "            model=\"gpt-4o\", max_tokens=1024),\n",
-    "        format=\"markdown\")\n",
+    "        model=ChatOpenAI(model=\"gpt-4o\", max_tokens=1024), format=\"markdown\"\n",
+    "    ),\n",
     ")\n",
     "docs = loader.load()\n",
     "print(docs[5].page_content)"
@@ -1428,8 +1437,8 @@
    "source": [
     "loader = PDFPlumberLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
-    "    extract_tables='markdown',\n",
+    "    mode=\"page\",\n",
+    "    extract_tables=\"markdown\",\n",
     ")\n",
     "docs = loader.load()\n",
     "print(docs[4].page_content)"
