--- a/libs/cli/langchain_cli/integration_template/docs/document_loaders.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/document_loaders.ipynb
@@ -58,7 +58,9 @@
     "import getpass\n",
     "import os\n",
     "\n",
-    "os.environ[\"__MODULE_NAME___API_KEY\"] = getpass.getpass(\"Enter your __ModuleName__ API key: \")"
+    "os.environ[\"__MODULE_NAME___API_KEY\"] = getpass.getpass(\n",
+    "    \"Enter your __ModuleName__ API key: \"\n",
+    ")"
    ]
   },
   {
