delete pdfminerfasthtml notebook delete problematic markdown marker in notebooks

--- a/docs/docs/integrations/document_loaders/pdfminer.ipynb
+++ b/docs/docs/integrations/document_loaders/pdfminer.ipynb
@@ -8,7 +8,6 @@
     "\n",
     "This notebook provides a quick overview for getting started with `PDFMiner` [document loader](https://python.langchain.com/docs/concepts/document_loaders). For detailed documentation of all DocumentLoader features and configurations head to the [API reference](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PDFMinerLoader.html).\n",
     "\n",
-    "<br>\n",
     "\n",
     "## Overview\n",
     "### Integration details\n",
@@ -25,7 +24,6 @@
     "| :---: | :---: | :---: | :---: |:---: |\n",
     "| PDFMinerLoader | ✅ | ❌ | ✅ | ❌ |\n",
     "\n",
-    "<br>\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -181,6 +179,7 @@
    "execution_count": 5,
    "source": [
     "import pprint\n",
+    "\n",
     "pprint.pp(docs[0].metadata)"
    ]
   },
@@ -1188,10 +1187,13 @@
    },
    "cell_type": "code",
    "source": [
-    "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_text_with_rapidocr\n",
+    "from patch_langchain_community.document_loaders.parsers.pdf import (\n",
+    "    convert_images_to_text_with_rapidocr,\n",
+    ")\n",
+    "\n",
     "loader = PDFMinerLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
+    "    mode=\"page\",\n",
     "    extract_images=True,\n",
     "    images_to_text=convert_images_to_text_with_rapidocr(format=\"html\"),\n",
     ")\n",
@@ -1307,10 +1309,13 @@
    },
    "cell_type": "code",
    "source": [
-    "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_text_with_tesseract\n",
+    "from patch_langchain_community.document_loaders.parsers.pdf import (\n",
+    "    convert_images_to_text_with_tesseract,\n",
+    ")\n",
+    "\n",
     "loader = PDFMinerLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
+    "    mode=\"page\",\n",
     "    extract_images=True,\n",
     "    images_to_text=convert_images_to_text_with_tesseract(format=\"text\"),\n",
     ")\n",
@@ -1485,15 +1490,17 @@
    "cell_type": "code",
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_description\n",
+    "from patch_langchain_community.document_loaders.parsers.pdf import (\n",
+    "    convert_images_to_description,\n",
+    ")\n",
+    "\n",
     "loader = PDFMinerLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
+    "    mode=\"page\",\n",
     "    extract_images=True,\n",
     "    images_to_text=convert_images_to_description(\n",
-    "        model=ChatOpenAI(\n",
-    "            model=\"gpt-4o\", max_tokens=1024),\n",
-    "        format=\"markdown\")\n",
+    "        model=ChatOpenAI(model=\"gpt-4o\", max_tokens=1024), format=\"markdown\"\n",
+    "    ),\n",
     ")\n",
     "docs = loader.load()\n",
     "print(docs[5].page_content)"
@@ -1584,7 +1591,7 @@
     "file_path = \"./example_data/layout-parser-paper.pdf\"\n",
     "loader = PDFMinerPDFasHTMLLoader(file_path)\n",
     "docs = loader.load()\n",
-    "docs[0]\n"
+    "docs[0]"
    ],
    "outputs": [
     {
@@ -1652,7 +1659,7 @@
     "        cur_text = c.text\n",
     "snippets.append((cur_text, cur_fs))\n",
     "# Note: The above logic is very straightforward. One can also add more strategies such as removing duplicate snippets (as\n",
-    "# headers/footers in a PDF appear on multiple pages so if we find duplicates it's safe to assume that it is redundant info)\n"
+    "# headers/footers in a PDF appear on multiple pages so if we find duplicates it's safe to assume that it is redundant info)"
    ],
    "outputs": [],
    "execution_count": 18
@@ -1666,7 +1673,6 @@
    },
    "cell_type": "code",
    "source": [
-    "\n",
     "from langchain_core.documents import Document\n",
     "\n",
     "cur_idx = -1\n",
@@ -1675,8 +1681,8 @@
     "for s in snippets:\n",
     "    # if current snippet's font size > previous section's heading => it is a new heading\n",
     "    if (\n",
-    "            not semantic_snippets\n",
-    "            or s[1] > semantic_snippets[cur_idx].metadata[\"heading_font\"]\n",
+    "        not semantic_snippets\n",
+    "        or s[1] > semantic_snippets[cur_idx].metadata[\"heading_font\"]\n",
     "    ):\n",
     "        metadata = {\"heading\": s[0], \"content_font\": 0, \"heading_font\": s[1]}\n",
     "        metadata.update(docs[0].metadata)\n",
@@ -1687,8 +1693,8 @@
     "    # if current snippet's font size <= previous section's content => content belongs to the same section (one can also create\n",
     "    # a tree like structure for sub sections if needed but that may require some more thinking and may be data specific)\n",
     "    if (\n",
-    "            not semantic_snippets[cur_idx].metadata[\"content_font\"]\n",
-    "            or s[1] <= semantic_snippets[cur_idx].metadata[\"content_font\"]\n",
+    "        not semantic_snippets[cur_idx].metadata[\"content_font\"]\n",
+    "        or s[1] <= semantic_snippets[cur_idx].metadata[\"content_font\"]\n",
     "    ):\n",
     "        semantic_snippets[cur_idx].page_content += s[0]\n",
     "        semantic_snippets[cur_idx].metadata[\"content_font\"] = max(\n",
