--- a/docs/docs/integrations/document_loaders/pypdfium2.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfium2.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This notebook provides a quick overview for getting started with `PyPDFium2` [document loader](https://python.langchain.com/docs/concepts/document_loaders). For detailed documentation of all DocumentLoader features and configurations head to the [API reference](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PyPDFium2Loader.html).\n",
     "\n",
-    "<br>\n",
+    "  \n",
     "\n",
     "## Overview\n",
     "### Integration details\n",
@@ -25,7 +25,7 @@
     "| :---: | :---: | :---: | :---: |:---: |\n",
     "| PyPDFium2Loader | ✅ | ❌ | ✅ | ❌  |\n",
     "\n",
-    "<br>\n",
+    "  \n",
     "\n",
     "## Setup\n",
     "\n",
@@ -166,6 +166,7 @@
    "cell_type": "code",
    "source": [
     "import pprint\n",
+    "\n",
     "pprint.pp(docs[0].metadata)"
    ],
    "outputs": [
@@ -1038,10 +1039,13 @@
    },
    "cell_type": "code",
    "source": [
-    "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_text_with_rapidocr\n",
+    "from patch_langchain_community.document_loaders.parsers.pdf import (\n",
+    "    convert_images_to_text_with_rapidocr,\n",
+    ")\n",
+    "\n",
     "loader = PyPDFium2Loader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
+    "    mode=\"page\",\n",
     "    extract_images=True,\n",
     "    images_to_text=convert_images_to_text_with_rapidocr(format=\"html\"),\n",
     ")\n",
@@ -1147,10 +1151,13 @@
    },
    "cell_type": "code",
    "source": [
-    "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_text_with_tesseract\n",
+    "from patch_langchain_community.document_loaders.parsers.pdf import (\n",
+    "    convert_images_to_text_with_tesseract,\n",
+    ")\n",
+    "\n",
     "loader = PyPDFium2Loader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
+    "    mode=\"page\",\n",
     "    extract_images=True,\n",
     "    images_to_text=convert_images_to_text_with_tesseract(format=\"text\"),\n",
     ")\n",
@@ -1337,15 +1344,17 @@
    "cell_type": "code",
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "from patch_langchain_community.document_loaders.parsers.pdf import convert_images_to_description\n",
+    "from patch_langchain_community.document_loaders.parsers.pdf import (\n",
+    "    convert_images_to_description,\n",
+    ")\n",
+    "\n",
     "loader = PyPDFium2Loader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
-    "    mode='page',\n",
+    "    mode=\"page\",\n",
     "    extract_images=True,\n",
     "    images_to_text=convert_images_to_description(\n",
-    "        model=ChatOpenAI(\n",
-    "            model=\"gpt-4o\", max_tokens=1024),\n",
-    "        format=\"markdown\")\n",
+    "        model=ChatOpenAI(model=\"gpt-4o\", max_tokens=1024), format=\"markdown\"\n",
+    "    ),\n",
     ")\n",
     "docs = loader.load()\n",
     "print(docs[5].page_content)"
