refactor notebooks add makefile command to delete line ''%pip install dist' in every notebooks when syncing

--- a/docs/docs/integrations/document_loaders/pypdfdirectory.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfdirectory.ipynb
@@ -40,13 +40,18 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T15:14:49.683516Z",
+     "start_time": "2024-12-11T15:14:49.680852Z"
+    }
+   },
    "source": [
     "# os.environ[\"LANGSMITH_API_KEY\"] = getpass.getpass(\"Enter your LangSmith API key: \")\n",
     "# os.environ[\"LANGSMITH_TRACING\"] = \"true\""
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -59,20 +64,27 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T15:14:53.202610Z",
+     "start_time": "2024-12-11T15:14:49.723472Z"
+    }
+   },
    "source": [
-    "%%capture\n",
-    "%pip install -qU langchain_community pypdf pillow"
+    "%pip install -qU langchain_community pypdf pillow\n",
+    "%pip install -qq ../../../../dist/patch_langchain_pdf_loader*.whl"
    ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "%pip install -qU ../../../../dist/patch_langchain_pdf_loader-0.0.0-py3-none-any.whl"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -87,8 +99,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-26T16:13:22.559920Z",
-     "start_time": "2024-11-26T16:13:21.497502Z"
+     "end_time": "2024-12-11T15:14:54.267510Z",
+     "start_time": "2024-12-11T15:14:53.412628Z"
     }
    },
    "source": [
@@ -104,12 +116,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_53439/4208923121.py:6: LangChainDeprecationWarning: The class `PyPDFDirectoryLoader` was deprecated in LangChain 0.3.X and will be removed in 1.0. Use :class:`~langchain_community.document_loaders.generic.GenericLoader` instead.\n",
+      "/tmp/ipykernel_141102/4208923121.py:6: LangChainDeprecationWarning: The class `PyPDFDirectoryLoader` was deprecated in LangChain 0.3.X and will be removed in 1.0. Use :class:`~langchain_community.document_loaders.generic.GenericLoader` instead.\n",
       "  loader = PyPDFDirectoryLoader(\"example_data/\")\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -122,8 +134,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-26T16:13:23.170371Z",
-     "start_time": "2024-11-26T16:13:22.627303Z"
+     "end_time": "2024-12-11T15:14:54.980142Z",
+     "start_time": "2024-12-11T15:14:54.274834Z"
     }
    },
    "source": [
@@ -137,19 +149,19 @@
        "Document(metadata={'author': '', 'creationdate': '2021-06-22T01:27:10+00:00', 'creator': 'LaTeX with hyperref', 'keywords': '', 'moddate': '2021-06-22T01:27:10+00:00', 'ptex.fullbanner': 'This is pdfTeX, Version 3.14159265-2.6-1.40.21 (TeX Live 2020) kpathsea version 6.3.2', 'producer': 'pdfTeX-1.40.21', 'subject': '', 'title': '', 'trapped': '/False', 'source': 'example_data/layout-parser-paper.pdf', 'total_pages': 16, 'page': 0}, page_content='LayoutParser: A Uniﬁed Toolkit for Deep\\nLearning Based Document Image Analysis\\nZejiang Shen1 (\\x00 ), Ruochen Zhang2, Melissa Dell3, Benjamin Charles Germain\\nLee4, Jacob Carlson3, and Weining Li5\\n1 Allen Institute for AI\\nshannons@allenai.org\\n2 Brown University\\nruochen zhang@brown.edu\\n3 Harvard University\\n{melissadell,jacob carlson}@fas.harvard.edu\\n4 University of Washington\\nbcgl@cs.washington.edu\\n5 University of Waterloo\\nw422li@uwaterloo.ca\\nAbstract. Recent advances in document image analysis (DIA) have been\\nprimarily driven by the application of neural networks. Ideally, research\\noutcomes could be easily deployed in production and extended for further\\ninvestigation. However, various factors like loosely organized codebases\\nand sophisticated model conﬁgurations complicate the easy reuse of im-\\nportant innovations by a wide audience. Though there have been on-going\\neﬀorts to improve reusability and simplify deep learning (DL) model\\ndevelopment in disciplines like natural language processing and computer\\nvision, none of them are optimized for challenges in the domain of DIA.\\nThis represents a major gap in the existing toolkit, as DIA is central to\\nacademic research across a wide range of disciplines in the social sciences\\nand humanities. This paper introduces LayoutParser, an open-source\\nlibrary for streamlining the usage of DL in DIA research and applica-\\ntions. The core LayoutParser library comes with a set of simple and\\nintuitive interfaces for applying and customizing DL models for layout de-\\ntection, character recognition, and many other document processing tasks.\\nTo promote extensibility, LayoutParser also incorporates a community\\nplatform for sharing both pre-trained models and full document digiti-\\nzation pipelines. We demonstrate that LayoutParser is helpful for both\\nlightweight and large-scale digitization pipelines in real-word use cases.\\nThe library is publicly available at https://layout-parser.github.io.\\nKeywords: Document Image Analysis · Deep Learning · Layout Analysis\\n· Character Recognition · Open Source library · Toolkit.\\n1 Introduction\\nDeep Learning(DL)-based approaches are the state-of-the-art for a wide range of\\ndocument image analysis (DIA) tasks including document image classiﬁcation [11,\\narXiv:2103.15348v2  [cs.CV]  21 Jun 2021')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-26T16:13:23.324756Z",
-     "start_time": "2024-11-26T16:13:23.321488Z"
+     "end_time": "2024-12-11T15:14:54.990093Z",
+     "start_time": "2024-12-11T15:14:54.987432Z"
     }
    },
    "source": [
@@ -164,7 +176,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -177,8 +189,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-26T16:13:23.919646Z",
-     "start_time": "2024-11-26T16:13:23.375102Z"
+     "end_time": "2024-12-11T15:14:55.575272Z",
+     "start_time": "2024-12-11T15:14:55.030320Z"
     }
    },
    "source": [
@@ -192,7 +204,7 @@
     "        page = []"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
